SERVER-70515 Remove getShardFilterer API